--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:id="@+id/search_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Search" />
