--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="navigation_drawer_width">240dp</dimen>
 
+    <dimen name="pet_item_width">100dp</dimen>
+    <dimen name="pet_item_height">100dp</dimen>
+
 </resources>
