--- a/app/src/main/res/layout/fragment_petitem_detail.xml
+++ b/app/src/main/res/layout/fragment_petitem_detail.xml
@@ -1,9 +1,23 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/petitem_detail"
-    style="?android:attr/textAppearanceLarge"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:textIsSelectable="true"
-    tools:context="com.eitan.petsi.data.PetItemDetailFragment" />
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
+    android:orientation="vertical"
+    android:weightSum="3">
+    <ImageView
+        android:id="@+id/det_petimage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_weight="1"/>
+    <TextView
+        android:id="@+id/det_petdesc"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:paddingTop="16dp"
+        android:gravity="top" />
+
+</LinearLayout>
