--- a/app/src/main/res/layout/fragment_petitem_detail.xml
+++ b/app/src/main/res/layout/fragment_petitem_detail.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
+        android:scaleType="matrix"
         android:layout_weight="1"/>
     <TextView
         android:id="@+id/det_petdesc"
