--- a/app/src/main/res/layout/fragment_petitem_detail.xml
+++ b/app/src/main/res/layout/fragment_petitem_detail.xml
@@ -13,12 +13,26 @@
         android:layout_gravity="top"
         android:scaleType="matrix"
         android:layout_weight="1"/>
-    <TextView
-        android:id="@+id/det_petdesc"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:paddingTop="16dp"
-        android:gravity="top" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:paddingLeft="10dp">
+
+        <TextView
+            android:id="@+id/det_petName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:textSize="15sp"/>
+
+        <TextView
+            android:id="@+id/det_petdesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top" />
+    </LinearLayout>
+
 
 </LinearLayout>
