--- a/app/src/main/res/layout/fragment_petitem_detail.xml
+++ b/app/src/main/res/layout/fragment_petitem_detail.xml
@@ -5,19 +5,19 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     android:orientation="vertical"
-    android:weightSum="3">
+    android:weightSum="10">
 
     <LinearLayout
         android:id="@+id/det_cont_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="3">
         <ImageView
             android:id="@+id/det_petimage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="matrix"/>
+            android:scaleType="centerCrop"/>
     </LinearLayout>
 
     <LinearLayout
@@ -25,20 +25,108 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="2"
         android:layout_gravity="top"
-        android:paddingLeft="10dp">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_weight="5">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="3"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
+
+            <TextView
+                android:id="@+id/det_age_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="25sp"
+                android:gravity="center"/>
+            <View
+                android:layout_height="30dp"
+                android:layout_width="0.5dp"
+                android:background="@android:color/background_dark"/>
+
+            <TextView
+                android:id="@+id/det_gender_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="25sp"
+                android:gravity="center"
+                android:layout_weight="1"/>
+
+            <View
+                android:layout_height="30dp"
+                android:layout_width="0.5dp"
+                android:background="@android:color/background_dark"/>
+
+            <TextView
+                android:id="@+id/det_size_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="25sp"
+                android:gravity="center"
+                android:layout_weight="1"/>
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@android:color/background_dark"/>
 
         <TextView
-            android:id="@+id/det_petName"
+            android:id="@+id/det_peDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="top"
-            android:text="My name"
             android:layout_gravity="top"
-            android:textSize="25sp"/>
+            android:textSize="15sp"/>
+
 
     </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:weightSum="2">
+
+        <ImageView
+            android:id="@+id/det_call_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_action_call"
+            android:scaleType="fitCenter"
+            android:layout_weight="1"/>
+
+        <ImageView
+            android:id="@+id/det_mail_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_action_send_now"
+            android:scaleType="fitCenter"
+            android:layout_weight="1"/>
+
+
+    </LinearLayout>
+
 </LinearLayout>
+
+
+
+
+
+
+
+
+
+
