--- a/app/src/main/res/layout/fragment_petitem_detail.xml
+++ b/app/src/main/res/layout/fragment_petitem_detail.xml
@@ -5,14 +5,18 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     android:orientation="vertical"
+    android:background="#BEBEBE"
+    android:paddingBottom="0dp"
     android:weightSum="10">
+
 
     <LinearLayout
         android:id="@+id/det_cont_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="3">
+        android:layout_weight="5">
+
         <ImageView
             android:id="@+id/det_petimage"
             android:layout_width="match_parent"
@@ -20,15 +24,17 @@
             android:scaleType="centerCrop"/>
     </LinearLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="5">
+
     <LinearLayout
         android:id="@+id/det_cont_gen_data"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_gravity="top"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_weight="5">
+        android:layout_gravity="top">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -36,88 +42,249 @@
             android:layout_height="wrap_content"
             android:weightSum="3"
             android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="#ffffffff">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center">
+                <ImageView
+                    android:id="@+id/det_call_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_action_call"
+                    android:scaleType="fitCenter"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/call_owner"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+
+
+            <View
+                android:layout_height="match_parent"
+                android:layout_width="0.5dp"
+                android:background="@android:color/background_dark"/>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center">
+                <ImageView
+                    android:id="@+id/det_mail_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_action_send_now"
+                    android:scaleType="fitCenter"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/mail_owner"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+            <View
+                android:layout_height="match_parent"
+                android:layout_width="0.5dp"
+                android:background="@android:color/background_dark"/>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center">
+                <ImageView
+                    android:id="@+id/det_fav_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_action_favorite"
+                    android:scaleType="fitCenter"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"/>
+
+                <TextView
+                    android:id="@+id/det_likes_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/pet_data_card"
+            android:background="#ffffffff"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:paddingLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="1.5">
+                <TextView
+                    android:id="@+id/det_gender_txt_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="20sp"
+                    android:gravity="left"
+                    android:text="@string/gender"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/det_gender_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="20sp"
+                    android:gravity="left"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:text="Male" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="5dp"
+                android:weightSum="1.5">
+                <TextView
+                    android:id="@+id/det_size_txt_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="20sp"
+                    android:gravity="left"
+                    android:text="@string/size"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/det_size_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="20sp"
+                    android:gravity="left"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:text="Small" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="5dp"
+                android:weightSum="1.5">
+                <TextView
+                    android:id="@+id/det_age_txt_label"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="20sp"
+                    android:gravity="left"
+                    android:text="@string/age"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/det_age_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="20sp"
+                    android:gravity="left"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:text="5" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/pet_story_card"
+            android:background="#ffffffff"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:paddingLeft="10dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
             android:paddingBottom="10dp">
 
             <TextView
-                android:id="@+id/det_age_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textSize="25sp"
-                android:gravity="center"/>
-            <View
-                android:layout_height="30dp"
-                android:layout_width="0.5dp"
-                android:background="@android:color/background_dark"/>
+                android:id="@+id/det_pet_story_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:layout_gravity="top"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="@string/story"/>
 
             <TextView
-                android:id="@+id/det_gender_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="25sp"
-                android:gravity="center"
-                android:layout_weight="1"/>
-
-            <View
-                android:layout_height="30dp"
-                android:layout_width="0.5dp"
-                android:background="@android:color/background_dark"/>
-
-            <TextView
-                android:id="@+id/det_size_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="25sp"
-                android:gravity="center"
-                android:layout_weight="1"/>
+                android:id="@+id/det_pet_story"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:layout_gravity="top"
+                android:textSize="15sp"/>
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@android:color/background_dark"/>
-
-        <TextView
-            android:id="@+id/det_peDescription"
+        <LinearLayout
+            android:id="@+id/pet_contact_card"
+            android:background="#ffffffff"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="top"
-            android:layout_gravity="top"
-            android:textSize="15sp"/>
+            android:layout_marginLeft="10dp"
+            android:paddingLeft="10dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:layout_gravity="top"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="@string/contact"/>
 
+            <TextView
+                android:id="@+id/det_owner_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:layout_gravity="top"
+                android:textSize="15sp"/>
+            <TextView
+                android:id="@+id/det_owner_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:layout_gravity="top"
+                android:textSize="15sp"/>
+        </LinearLayout>
     </LinearLayout>
+    </ScrollView>
 
-
-    <LinearLayout
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingRight="10dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:weightSum="2">
-
-        <ImageView
-            android:id="@+id/det_call_btn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_action_call"
-            android:scaleType="fitCenter"
-            android:layout_weight="1"/>
-
-        <ImageView
-            android:id="@+id/det_mail_btn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_action_send_now"
-            android:scaleType="fitCenter"
-            android:layout_weight="1"/>
-
-
-    </LinearLayout>
 
 </LinearLayout>
 
