--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -52,14 +53,19 @@
                     android:maxLines="1"
                     android:singleLine="true"/>
 
-                <Button
+                <info.hoang8f.widget.FButton
+                    fbutton:buttonColor="@color/purple"
+                    fbutton:shadowColor="@color/fbutton_color_asbestos"
+                    fbutton:shadowEnabled="true"
+                    fbutton:shadowHeight="3dp"
+                    fbutton:cornerRadius="1dp"
                     android:id="@+id/email_sign_in_button"
-                    style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/action_sign_in"
                     android:textStyle="bold"/>
+
 
             </LinearLayout>
     </ScrollView>
