--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <item name="purple" type="color">#AA66CC</item>
     <item name="color_action_bar" type="color">#FFFFFF</item>
+    <item name="app_background" type="color">#FFFFFF</item>
 </resources>
 
 
