--- a/app/src/main/res/values/strings_navigation_drawer_fragment.xml
+++ b/app/src/main/res/values/strings_navigation_drawer_fragment.xml
@@ -4,10 +4,12 @@
     <string-array name="actions">
         <item>Search</item>
         <item>Favorites</item>
+        <item>My pets</item>
     </string-array>
 
     <array name="images">
         <item>@drawable/ic_action_search</item>
         <item>@drawable/ic_action_favorite</item>
+        <item>@drawable/ic_action_my_pets</item>
     </array>
 </resources>
