--- a/app/src/main/res/layout/activity_new_ad.xml
+++ b/app/src/main/res/layout/activity_new_ad.xml
@@ -1,4 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingLeft="0dp"
@@ -43,6 +45,24 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2">
 
+        <info.hoang8f.widget.FButton
+            fbutton:buttonColor="@color/purple"
+            fbutton:shadowColor="@color/fbutton_color_asbestos"
+            fbutton:shadowEnabled="true"
+            fbutton:shadowHeight="2dp"
+            fbutton:cornerRadius="1dp"
+            android:id="@+id/save_new_ad"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/save_ad"
+            android:textStyle="bold"
+            android:textColor="@color/common_signin_btn_dark_text_default"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
 </LinearLayout>
