--- a/app/src/main/res/values/strings_activity_main.xml
+++ b/app/src/main/res/values/strings_activity_main.xml
@@ -4,4 +4,5 @@
     <string name="nav_search">Search</string>
     <string name="nav_favorite">Search</string>
 
+    <string name="get_ads_error">An error occurred while fetching ads</string>
 </resources>
