--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,13 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:fbutton="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.eitan.petsi.MainActivity$PlaceholderFragment">
 
     <Spinner
@@ -24,22 +25,73 @@
         android:id="@+id/gender_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
-    <Spinner
-        android:id="@+id/age_spinner"
+
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:weightSum="3">
+
+            <TextView
+                android:id="@+id/age_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/age"
+                android:textSize="18sp"
+            />
+
+            <TextView
+                android:id="@+id/age_range_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="1  -  20"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                />
+            <TextView
+                android:id="@+id/empty"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="15sp"
+
+                />
+        </LinearLayout>
+
+        <com.edmodo.rangebar.RangeBar
+            xmlns:custom="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/age_range"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            custom:barColor="@color/purple"
+            custom:tickHeight="3dp"
+            custom:thumbRadius="5dp"
+            custom:connectingLineColor="@color/purple"
+            custom:thumbColorNormal="@color/purple"
+        />
+    </LinearLayout>
 
     <info.hoang8f.widget.FButton
-        fbutton:buttonColor="@color/purple"
-        fbutton:shadowColor="@color/fbutton_color_asbestos"
-        fbutton:shadowEnabled="true"
-        fbutton:shadowHeight="3dp"
-        fbutton:cornerRadius="1dp"
         android:id="@+id/search_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:text="Search"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        android:layout_marginTop="15dp"/>
+        fbutton:buttonColor="@color/purple"
+        fbutton:cornerRadius="1dp"
+        fbutton:shadowColor="@color/fbutton_color_asbestos"
+        fbutton:shadowEnabled="true"
+        fbutton:shadowHeight="3dp"/>
 </LinearLayout>
