--- a/app/src/main/res/layout/fragment_petitem_detail.xml
+++ b/app/src/main/res/layout/fragment_petitem_detail.xml
@@ -287,6 +287,13 @@
                         android:gravity="top"
                         android:layout_gravity="top"
                         android:textSize="15sp"/>
+                    <TextView
+                        android:id="@+id/det_owner_phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="top"
+                        android:layout_gravity="top"
+                        android:textSize="15sp"/>
                 </LinearLayout>
             </LinearLayout>
             </ScrollView>
