--- a/app/src/main/res/layout/activity_new_ad.xml
+++ b/app/src/main/res/layout/activity_new_ad.xml
@@ -19,8 +19,8 @@
             android:id="@+id/picture"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_action_camera"
-            android:scaleType="centerCrop"/>
+            android:src="@drawable/ic_action_take_picture"
+            android:scaleType="center"/>
     </LinearLayout>
 
     <LinearLayout
