--- a/app/src/main/res/layout/fragment_petitem_detail.xml
+++ b/app/src/main/res/layout/fragment_petitem_detail.xml
@@ -288,6 +288,13 @@
                         android:layout_gravity="top"
                         android:textSize="15sp"/>
                     <TextView
+                        android:id="@+id/det_owner_mail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="top"
+                        android:layout_gravity="top"
+                        android:textSize="15sp"/>
+                    <TextView
                         android:id="@+id/det_owner_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
