--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -1,13 +1,74 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.eitan.petsi.UserDetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:weightSum="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            >
+
+
+            <EditText
+                android:id="@+id/user_details_first_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/user_details_first_name_hint"
+                android:layout_marginTop="15dp"
+                />
+            <EditText
+                android:id="@+id/user_details_last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/user_details_last_name_hint"
+                android:layout_marginTop="15dp"
+                />
+            <EditText
+                android:id="@+id/user_details_phone_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/user_details_phone_hint"
+                android:layout_marginTop="15dp"
+                />
+            <EditText
+                android:id="@+id/user_details_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/user_details_address_hint"
+                android:layout_marginTop="15dp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <info.hoang8f.widget.FButton
+                fbutton:buttonColor="@color/purple"
+                fbutton:shadowColor="@color/fbutton_color_asbestos"
+                fbutton:shadowEnabled="true"
+                fbutton:shadowHeight="2dp"
+                fbutton:cornerRadius="1dp"
+                android:id="@+id/save_user_details"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/save_ad"
+                android:textStyle="bold"
+                android:textColor="@color/common_signin_btn_dark_text_default"
+                android:layout_weight="1"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </FrameLayout>
