--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -9,12 +9,22 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.eitan.petsi.StartActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Petsy"
+        android:textSize="40sp"
+        android:gravity="center"
+        android:layout_marginTop="25dp"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:orientation="vertical">
+
 
         <info.hoang8f.widget.FButton
             fbutton:buttonColor="@color/fbutton_color_emerald"
